--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -22,6 +22,7 @@
                         <td th:text="${item.productName}">Last Action Hero</td>
                         <td th:text="${item.quantity}">10</td>
                         <td th:text="${{item.price}}">10 Euro</td>
+                        <td><button th:text = "#{item.delete}"></button></td> 
                     </tr>
                     <tr>
                         <td>Last Action Hero</td>
@@ -49,10 +50,31 @@
                                 <div class="value"><span th:text="${{cart.price}}">1337</span></div>
                             </div>
                         </div>
+                        <br />
                         <div class="column">
                             <form sec:authorize="hasRole('CUSTOMER')" class="ui form" method="post" th:action="@{/checkout}">
                                 <button type="submit" class="ui button" th:text="#{cart.buy}">Kaufen</button>
                             </form>
+                        </div>
+                        <br />
+                        <br />
+                        <div class="column">
+                            <form sec:authorize="hasRole('CUSTOMER')" class="ui form" method="post" th:action="@{/clear}" id="WarenkorbLoeschen">
+                                <button type="button" onclick="myFunction()">Warenkorb löschen</button>
+
+                                <script>
+                                function myFunction() {
+                                    let text = "Soll gesamter Warenkorb gelöscht werden?";
+                                    if (confirm(text)) {
+                                        document.getElementById("WarenkorbLoeschen").submit();
+                                     } 
+                                } 
+                            </script>  
+                            </form>
+                            <!DOCTYPE html>
+                            
+
+                            </div>
                         </div>
                     </div>
                 </div>
